# ismip6-antarctic-ocean-forcing

./: LICENSE  MANIFEST.in  README.md  dev-spec.txt  pyproject.toml  setup.py
conda/: meta.yaml
example_usage/: README.md  combine_all.py  config.combine_template  config.obs  config.template  job_script_combine_template.bash  job_script_obs.bash  job_script_template.bash  setup_decades.py  setup_years.py
example_usage/cori/: combine_all.py  setup_years_decades.py
example_usage/cori_update_topo/: setup_years_decades.py
ismip6_ocean_forcing/: __init__.py  __main__.py  config.default  default.cfg
ismip6_ocean_forcing/bedmap2/: __init__.py  remap.py
ismip6_ocean_forcing/ccsm4/: process_ccsm4.py
ismip6_ocean_forcing/csiro_mk3_6_0/: README.md
ismip6_ocean_forcing/en4/: main.py
ismip6_ocean_forcing/extrap/: horiz.py  vert.py
ismip6_ocean_forcing/hadgem2_es/: README.md
ismip6_ocean_forcing/imbie/: __init__.py  extend.py  geojson.py  images.py  make_imbie_masks.py
ismip6_ocean_forcing/io/: __init__.py  download.py
ismip6_ocean_forcing/meop/: main.py
ismip6_ocean_forcing/miroc_esm_chem/: process_miroc_esm_chem.py
ismip6_ocean_forcing/model/: anomaly.py  extrap.py  remap.py
ismip6_ocean_forcing/noresm1_m/: README.md  process_noresm1_m.py
ismip6_ocean_forcing/obs/: extrap.py  main.py
ismip6_ocean_forcing/param_calibration/: README.md  calculate_K0_DeltaT_quadratic.f90  finalize_files_for_ISMIP6_LOCAL.sh  finalize_files_for_ISMIP6_NON_LOCAL.sh  identify_ice_shelf_mask_BEDMAP2.f90  (+10 more)
utility/: ismip6_ocean_forcing  remap_stereographic.py
(+61 files in other folders)
